--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,4 +9,5 @@
 
 // Vuetify
 
-@import '~vuetify/dist/vuetify.min.css'
+@import '~vuetify/dist/vuetify.min.css';
+@import 'material-design-icons-iconfont/dist/material-design-icons.css';
