--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,5 +9,8 @@
 
 // Vuetify
 
-@import '~vuetify/dist/vuetify.min.css';
-@import 'material-design-icons-iconfont/dist/material-design-icons.css';
+@import '~material-design-icons-iconfont/dist/material-design-icons.css';
+@import "https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900";
+@import "https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css";
+@import "https://fonts.googleapis.com/css?family=Material+Icons";
+@import '~vuetify/dist/vuetify.css';
